--- a/app/src/main/res/layout/activity_start_up_help_actvity.xml
+++ b/app/src/main/res/layout/activity_start_up_help_actvity.xml
@@ -11,11 +11,11 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
         >
         <LinearLayout
-            android:id="@+id/mainLinearLayout"
+            android:id="@+id/helpMainLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical|center_horizontal"
