--- a/app/src/main/res/layout/start_up_help_body.xml
+++ b/app/src/main/res/layout/start_up_help_body.xml
@@ -13,7 +13,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff"
+        android:background="@color/baseBackground"
         android:fillViewport="true"
         >
         <LinearLayout
