--- a/app/src/main/res/layout/base_window_layout.xml
+++ b/app/src/main/res/layout/base_window_layout.xml
@@ -42,7 +42,7 @@
                 android:textColor="@color/textOnFrame"
                 android:textStyle="bold"
                 android:layout_gravity="start"
-                android:text="Header"
+                android:text=""
                 android:textSize="12sp"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
@@ -104,7 +104,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/textOnFrame"
                 android:layout_gravity="end"
-                android:text="Footer"
+                android:text=""
                 android:textSize="12sp"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
