--- a/app/src/main/res/layout/url_entry_view.xml
+++ b/app/src/main/res/layout/url_entry_view.xml
@@ -31,7 +31,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Command: "
+            android:text="@string/url_preference_column_name"
+            android:paddingEnd="4sp"
             />
         <TextView
             android:id="@+id/urlNameOnEntryView"
