--- a/app/src/main/res/layout/activity_ping.xml
+++ b/app/src/main/res/layout/activity_ping.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/baseBackground"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
     <TextView
         android:id="@+id/command_title_text_view"
         android:layout_width="match_parent"
