--- a/app/src/main/res/layout/preferences_custom_web_each_body.xml
+++ b/app/src/main/res/layout/preferences_custom_web_each_body.xml
@@ -5,7 +5,7 @@
     android:background="@color/baseBackground"
     >
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
@@ -14,6 +14,7 @@
             android:layout_height="wrap_content"
             android:text="@string/url_preference_column_name"
             android:labelFor="@id/url_name"
+            android:imeOptions="flagForceAscii"
             />
         <EditText
             android:id="@+id/url_name"
