add skip substring match

--- a/app/src/main/res/layout/base_window_layout.xml
+++ b/app/src/main/res/layout/base_window_layout.xml
@@ -30,7 +30,10 @@
             <LinearLayout
                 android:layout_width="3sp"
                 android:layout_height="match_parent"
-                android:background="@color/colorAccentForFrame"></LinearLayout>
+                android:background="@color/colorAccentForFrame"
+                android:orientation="horizontal"
+                >
+            </LinearLayout>
             <TextView
                 android:clickable="true"
                 android:id="@+id/baseWindowMainHeaderTextView"
