--- a/app/src/main/res/layout/main_activity_body.xml
+++ b/app/src/main/res/layout/main_activity_body.xml
@@ -10,6 +10,8 @@
     android:orientation="vertical"
     android:background="@color/colorFrame"
     android:animateLayoutChanges="true"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
     >
     <LinearLayout
         android:id="@+id/mainInputTextWrapperLinearLayout"
