--- a/app/src/main/res/layout/preferences_activity_body.xml
+++ b/app/src/main/res/layout/preferences_activity_body.xml
@@ -17,7 +17,7 @@
         android:fillViewport="true"
         >
         <FrameLayout
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:id="@+id/main_preference_fragment"
             android:background="#ffffff"
