--- a/app/src/main/res/layout/base_window_layout.xml
+++ b/app/src/main/res/layout/base_window_layout.xml
@@ -32,10 +32,9 @@
                 android:layout_height="match_parent"
                 android:background="@color/colorAccentForFrame"
                 android:orientation="horizontal"
-                >
-            </LinearLayout>
+                />
             <TextView
-                android:clickable="true"
+                android:clickable="false"
                 android:id="@+id/baseWindowMainHeaderTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -97,7 +96,7 @@
             android:animateLayoutChanges="true"
             >
             <TextView
-                android:clickable="true"
+                android:clickable="false"
                 android:id="@+id/baseWindowMainFooterTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -115,7 +114,8 @@
             <LinearLayout
                 android:layout_width="3sp"
                 android:layout_height="match_parent"
-                android:background="@color/colorAccentForFrame"></LinearLayout>
+                android:background="@color/colorAccentForFrame"
+                />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
