--- a/app/src/main/res/layout/candidateentryview.xml
+++ b/app/src/main/res/layout/candidateentryview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
@@ -20,6 +21,7 @@
         android:layout_margin="0dp"
         android:clickable="false"
         android:focusable="false"
+        tools:ignore="ContentDescription"
         />
 
     <LinearLayout
