--- a/app/src/main/res/layout/candidateentryview.xml
+++ b/app/src/main/res/layout/candidateentryview.xml
@@ -44,7 +44,7 @@
             android:paddingBottom="2dp"
             android:clickable="false"
             android:focusable="false"
-            android:textColor="@color/baseText"
+            android:textColor="?bluelineconsoleBaseTextColor"
             />
 
         <LinearLayout
