--- a/app/src/main/res/layout/url_entry_view.xml
+++ b/app/src/main/res/layout/url_entry_view.xml
@@ -20,7 +20,7 @@
         android:paddingBottom="2dp"
         android:clickable="false"
         android:focusable="false"
-        android:textColor="@color/baseText"
+        android:textColor="?bluelineconsoleBaseTextColor"
         android:textStyle="bold"
         />
     <LinearLayout
@@ -43,7 +43,7 @@
             android:paddingBottom="2dp"
             android:clickable="false"
             android:focusable="false"
-            android:textColor="@color/baseText"
+            android:textColor="?bluelineconsoleBaseTextColor"
             />
     </LinearLayout>
 
