--- a/app/src/main/res/drawable/main_header.xml
+++ b/app/src/main/res/drawable/main_header.xml
@@ -8,8 +8,8 @@
     >
     <path
         android:pathData="M0,18 L0,0 L119.61,0 L130,18"
-        android:fillColor="@color/colorFrame" />
+        android:fillColor="?bluelineconsoleFrameColor" />
     <path
         android:pathData="M0,3 L121.341667,3 L119.61,0 L0,0"
-        android:fillColor="@color/colorAccentForFrame" />
+        android:fillColor="?bluelineconsoleAccentColor" />
 </vector>
