--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorAccentForFrame">#4d68ff</color>
+    <color name="colorPrimary">#3f51b5</color>
+    <color name="colorPrimaryDark">#303f9f</color>
+
+    <color name="colorAccent">#4d68ff</color>
     <color name="baseText">#000000</color>
     <color name="textOnFrame">#000000</color>
     <color name="colorFrame">#dddddd</color>
     <color name="colorBackgroundOfCommand">#dddddd</color>
     <color name="baseBackground">#ffffff</color>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="selectedItemBackground">#CCCCCC</color>
+    <color name="selectedItemBackground">#cccccc</color>
+
+    <color name="colorAccentDark">#4d68ff</color>
+    <color name="baseTextDark">#ffffff</color>
+    <color name="textOnFrameDark">#ffffff</color>
+    <color name="colorFrameDark">#444444</color>
+    <color name="colorBackgroundOfCommandDark">#444444</color>
+    <color name="baseBackgroundDark">#000000</color>
+    <color name="selectedItemBackgroundDark">#666666</color>
+
+    <color name="MarineTopColor">#3078ff</color>
+    <color name="MarineBottomColor">#4464aa</color>
+
+    <color name="oldComputerForegroundColor">#00ff00</color>
 </resources>
