--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,70 @@
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:colorBackground">@color/baseBackground</item>
+        <item name="bluelineconsoleAccentColor">@color/colorAccent</item>
+        <item name="bluelineconsoleFrameColor">@color/colorFrame</item>
+        <item name="bluelineconsoleFrameTextColor">@color/textOnFrame</item>
+        <item name="bluelineconsoleBaseTextColor">@color/baseText</item>
+        <item name="bluelineconsoleSelectedItemBackgroundColor">@color/selectedItemBackground</item>
+        <item name="bluelineconsoleBackgroundColorOfCommand">@color/colorBackgroundOfCommand</item>
+    </style>
+
+    <style name="AppThemeDark" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:colorBackground">@color/baseBackgroundDark</item>
+        <item name="bluelineconsoleAccentColor">@color/colorAccentDark</item>
+        <item name="bluelineconsoleFrameColor">@color/colorFrameDark</item>
+        <item name="bluelineconsoleFrameTextColor">@color/textOnFrameDark</item>
+        <item name="bluelineconsoleBaseTextColor">@color/baseTextDark</item>
+        <item name="bluelineconsoleSelectedItemBackgroundColor">@color/selectedItemBackgroundDark</item>
+        <item name="bluelineconsoleBackgroundColorOfCommand">@color/colorBackgroundOfCommandDark</item>
+    </style>
+
+    <style name="AppThemeMarine" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:colorBackground">@color/baseBackground</item>
+        <item name="bluelineconsoleAccentColor">@color/colorAccent</item>
+        <item name="bluelineconsoleFrameColor">@color/MarineTopColor</item>
+        <item name="bluelineconsoleFrameTextColor">@color/textOnFrame</item>
+        <item name="bluelineconsoleBaseTextColor">@color/baseText</item>
+        <item name="bluelineconsoleSelectedItemBackgroundColor">@color/selectedItemBackground</item>
+        <item name="bluelineconsoleBackgroundColorOfCommand">@color/colorBackgroundOfCommand</item>
+    </style>
+
+    <style name="AppThemeOldComputer" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:colorBackground">@color/baseBackgroundDark</item>
+        <item name="bluelineconsoleAccentColor">#00ff00</item>
+        <item name="bluelineconsoleFrameColor">@color/baseBackgroundDark</item>
+        <item name="bluelineconsoleFrameTextColor">@color/oldComputerForegroundColor</item>
+        <item name="bluelineconsoleBaseTextColor">@color/oldComputerForegroundColor</item>
+        <item name="android:textColor">@color/oldComputerForegroundColor</item>
+        <item name="android:textColorPrimary">@color/oldComputerForegroundColor</item>
+        <item name="android:textColorSecondary">@color/oldComputerForegroundColor</item>
+        <item name="bluelineconsoleSelectedItemBackgroundColor">@color/selectedItemBackgroundDark</item>
+        <item name="bluelineconsoleBackgroundColorOfCommand">@color/colorBackgroundOfCommandDark</item>
+        <item name="android:fontFamily">monospace</item>
     </style>
 </resources>
