--- a/app/src/main/res/layout/main_activity_body.xml
+++ b/app/src/main/res/layout/main_activity_body.xml
@@ -8,7 +8,7 @@
     android:paddingVertical="0px"
     android:paddingHorizontal="0px"
     android:orientation="vertical"
-    android:background="@color/colorFrame"
+    android:background="?bluelineconsoleFrameColor"
     android:animateLayoutChanges="true"
     android:focusable="false"
     android:focusableInTouchMode="false"
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="0px"
-        android:background="@color/colorFrame"
+        android:background="?bluelineconsoleFrameColor"
         android:animateLayoutChanges="true"
         >
         <EditText
@@ -81,7 +81,7 @@
                         android:textStyle="bold"
                         android:text="@string/loading_main_caption"
                         android:textSize="18sp"
-                        android:textColor="@color/baseText"
+                        android:textColor="?bluelineconsoleBaseTextColor"
                         />
                     <TextView
                         android:layout_width="wrap_content"
