--- a/app/src/main/res/layout/start_up_help_body.xml
+++ b/app/src/main/res/layout/start_up_help_body.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:layout_gravity="start"
-                android:text="@string/notification_title_on_startup"
+                android:text="@string/startup_help_title"
                 android:textColor="?bluelineconsoleBaseTextColor"
                 android:textSize="12sp"
                 />
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:paddingVertical="6sp"
                 android:layout_gravity="start"
-                android:text="@string/notification_detail_on_startup_pre"
+                android:text="@string/startup_help_body_part1"
                 android:textColor="?bluelineconsoleBaseTextColor"
                 />
             <TextView
@@ -48,7 +48,7 @@
                 android:background="?bluelineconsoleBackgroundColorOfCommand"
                 android:textColor="?bluelineconsoleBaseTextColor"
                 android:typeface="monospace"
-                android:text="@string/notification_detail_on_startup_main"
+                android:text="@string/startup_help_body_part2"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -56,19 +56,19 @@
                 android:paddingVertical="6sp"
                 android:layout_gravity="start"
                 android:textColor="?bluelineconsoleBaseTextColor"
-                android:text="@string/notification_detail_on_startup_post"
+                android:text="@string/startup_help_body_part3"
                 />
             <CheckBox
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/startUpCheckBoxNotToContinue"
-                android:text="@string/notification_window_never_later" />
+                android:text="@string/startup_help_check_never_later" />
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/startUpOKButton"
                 android:textAllCaps="false"
-                android:text="@string/notification_window_close" />
+                android:text="@string/button_close" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
