--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,9 @@
 
     <color name="baseBackgroundMarine">#aaddff</color>
     <color name="selectedItemBackgroundMarine">#88bbdd</color>
+    <color name="baseTextMarine">#001833</color>
+    <color name="textOnFrameMarine">#001833</color>
+    <color name="MarineTextColorSecond">#003366</color>
     <color name="MarineTopColor">#3078ff</color>
     <color name="MarineBottomColor">#4464aa</color>
 
